# pcc-mp3dg

./: .gitignore  CMakeLists.txt  PCLConfig.cmake.in  README.md  parameter_config.txt
apps/: CMakeLists.txt
apps/evaluate_compression/: CMakeLists.txt
apps/evaluate_compression/include/pcl/apps/evaluate_compression/: evaluate_compression.h  quality_metrics.h
apps/evaluate_compression/include/pcl/apps/evaluate_compression/impl/: evaluate_compression_impl.hpp  quality_metrics_impl.hpp
apps/evaluate_compression/src/: evaluate_compression.cpp
cloud_codec_v2/: CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  pcl_cloud_codec_v2-1.8.pc  pcl_cloud_codec_v2.vcxproj  pcl_cloud_codec_v2.vcxproj.filters
cloud_codec_v2/include/pcl/cloud_codec_v2/: color_coding_jpeg.h  plane_proj_point_coding.h  point_cloud_codec_v2.h  point_cloud_codec_v2_omp.h  point_coding_v2.h  quaternion_coding.h  rigid_transform_coding.h  snake_grid_mapping.h
cloud_codec_v2/include/pcl/cloud_codec_v2/impl/: point_cloud_codec_v2_impl.hpp  point_cloud_codec_v2_omp_impl.hpp  quaternion_coding_impl.hpp  rigid_transform_coding_impl.hpp
cloud_codec_v2/pcl_cloud_codec_v2.dir/Debug/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  pcl_cloud_codec_v2.lastbuildstate  pcl_cloud_codec_v2.write.1.tlog  pcl_cloud_codec_v2_debug_manifest.rc  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
cloud_codec_v2/src/: point_cloud_codec_v2.cpp
cmake/: pcl_find_boost.cmake
compression_eval/: CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  bounding_box_pre_mesh.txt  cmake_install.cmake  pcl_compression_eval-1.8.pc  pcl_compression_eval.vcxproj  pcl_compression_eval.vcxproj.filters  test_predictive_coding.csv
compression_eval/include/pcl/compression_eval/: compression_eval.h  compression_eval_omp.h  reverie_mesh.h
compression_eval/include/pcl/compression_eval/impl/: compression_eval_impl.hpp  compression_eval_omp_impl.hpp  reverie_mesh_impl.hpp
compression_eval/pcl_compression_eval.dir/Debug/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  pcl_compression_eval_debug_manifest.rc  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
compression_eval/src/: compression_eval.cpp  compression_eval_omp.cpp
io/: CMakeLists.txt
io/include/pcl/compression/: octree_pointcloud_compression.h
io/include/pcl/compression/impl/: octree_pointcloud_compression.hpp
io/include/pcl/io/: jpeg_io.h
io/include/pcl/io/impl/: jpeg_io.hpp
io/src/: jpeg_io.cpp
io/src/ply/: ply_parser.cpp
octree/include/pcl/octree/: octree2buf_base.h  octree_key.h  octree_pointcloud.h
octree/include/pcl/octree/impl/: octree2buf_base.hpp
outofcore/src/visualization/: viewport.cpp
quality/: CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  pcl_quality-1.8.pc  pcl_quality.vcxproj  pcl_quality.vcxproj.filters
quality/include/pcl/quality/: quality_metrics.h
quality/include/pcl/quality/impl/: quality_metrics_impl.hpp
quality/pcl_quality.dir/Debug/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.write.1.tlog  pcl_quality_debug_manifest.rc  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
quality/src/: quality_metrics.cpp
test/: CMakeLists.txt
test/io/: CMakeLists.txt  test_jpeg_io.cpp
tools/: CMakeLists.txt  mpeg_pcc_compression_eval.cpp  mpeg_pcc_frame_coder.cpp  mpeg_pcc_gop_coder.cpp  mpeg_pcc_standalone.cpp
visualization/include/pcl/visualization/impl/: point_cloud_color_handlers.hpp
